@@ -1,1 +1,1 @@
-CONFIG_PROTECT="/opt/queuemetrics/tomcat/webapps/queuemetrics/WEB-INF/configuration.properties /opt/queuemetrics/tomcat/webapps/queuemetrics/WEB-INF/tpf.properties /opt/queuemetrics/tomcat/webapps/queuemetrics/WEB-INF/web.xml"
+CONFIG_PROTECT="/opt/queuemetrics/tomcat/conf/server.xml /opt/queuemetrics/tomcat/webapps/queuemetrics/WEB-INF/configuration.properties /opt/queuemetrics/tomcat/webapps/queuemetrics/WEB-INF/tpf.properties /opt/queuemetrics/tomcat/webapps/queuemetrics/WEB-INF/web.xml"
